@@ -22,7 +22,6 @@ if prefer :apps4, 'learn-rails'
   prefs[:pry] = false
   prefs[:quiet_assets] = true
   prefs[:secrets] = ['owner_email', 'mailchimp_list_id', 'mailchimp_api_key']
-  prefs[:starter_app] = false
   prefs[:templates] = 'erb'
   prefs[:tests] = false
 
