@@ -12,7 +12,6 @@ if prefer :apps4, 'rails-signup-download'
   prefs[:local_env_file] = false
   prefs[:pry] = false
   prefs[:quiet_assets] = true
-  prefs[:starter_app] = false
   after_everything do
     generate 'pages:authorized -f'
 
